Use list for messages. Fix not loaded css for room

--- a/static/chat.css
+++ b/static/chat.css
@@ -6,7 +6,8 @@
 .messages {
     width: 100%;
     height: 100%;
-    background-color: skyblue;
+    list-style-type: none;
+    list-style: none;
     font-size: 2em;
 }
 
