--- a/app/templates/room.html
+++ b/app/templates/room.html
@@ -10,9 +10,9 @@
 <body>
     <div class="chat">
         <ul class="messages">
-            {% for message in g.rooms_messages %} 
+            <!-- {% for message in g.rooms_messages %} 
             <li class="message">{{ message }}</li>
-            {% endfor %}
+            {% endfor %} -->
         </ul>
         <div class="text_editing">
             <form method="POST">
